Bug 223891 - Auto-replace is not applied to text that went through the multi-line paste editor
Summary: Auto-replace is not applied to text that went through the multi-line paste ed...
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.5-rc1
Platform: unspecified Unspecified
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-23 08:38 UTC by Emil Obermayr
Modified: 2013-04-15 05:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Emil Obermayr 2010-01-23 08:38:25 UTC
Version:            (using KDE 4.3.4)

Currently the automatic replacement applies only to text typed manually.

It would be handy to have this feature for pasted text also.

e.g: You have some servers in your LAN that are also available from the Internet. The replacement could do the necessary changes to the host-name and domain then.
Comment 1 Eike Hein 2013-04-14 21:00:14 UTC
There's now an action to apply auto-replace to the input line contents manually, which satisfies this as far as single-line pastes are concerned.

However, auto-replace is presently not applied to pastes that go through the multi-line paste editor, which is a bug.
Comment 2 Juan Carlos Torres 2013-04-15 05:23:06 UTC
Git commit 049f91328f366a8a115cc083d238436d285345ff by Juan Carlos Torres.
Committed on 15/04/2013 at 06:16.
Pushed by jucato into branch '1.4'.

Fix auto-replace for text from Large Paste Warning

This patch applies auto-replace on text that is sent
from the Large Paste Warning dialog, whether the user
chooses to invoke the paste editor or not.

M  +2    -0    ChangeLog
M  +2    -0    src/viewer/ircinput.cpp

http://commits.kde.org/konversation/049f91328f366a8a115cc083d238436d285345ff