Fix auto-replace for text from Large Paste Warning

This patch applies auto-replace on text that is sent
from the Large Paste Warning dialog, whether the user
chooses to invoke the paste editor or not.

BUG:223891